

syntax = "proto3";

package onight.act.ordbgens.act.pbo;

import "actgens.proto";

enum PBModule{
	ACT = 0;
};


enum PBCommand{
	CRT = 0 ;//创建主账户
	CRF = 1 ;//创建资金账户
	MOD = 2 ;//修改主账户
	MOF = 3 ;//修改资金账户
	FRZ = 4 ;//冻结资金账户
	ADD = 5 ;//增加金额
	QUR = 6 ;//查询
	DEL = 7 ;//删除
	TRN = 8 ;//转账资金账户
	QUE = 30;//根据条件相等查询
};

message PBFundOP	//账户操作
{
	PBTActLogs  logs = 1;//账户名称
	PBCommand  op = 20;//操作方式
};


message PBActCreate //创建资金账户
{
	string  act_no		=1;				//资金子账户号
	PBTActInfo  pb_act_info		=2;				//账户信息，如果act_no为空，则创建一个账户，再创建资金账户
}


message PBFundCreate //创建资金子账户
{
	string  fund_no		=1;				//资金子账户号
	PBTActFund  pb_act_info		=2;				//账户信息，如果act_no为空，则创建一个账户，再创建资金账户
}

message PBActRet 
{
	enum RetCode{
		SUCCESS = 0;//成功
		FAILED = -1;//失败
	}
	RetCode retcode = 1;//返回码
	string status = 2;//状态信息
	string desc = 3;//描述信息
	 
	string  fund_no=50;				//资金账户号
	string  act_no=60;				//账户号
	 
	repeated PBTActInfo  pb_act_info		=70;//账户信息，查询的时候使用
	repeated PBTActLogs	pb_fund_log	= 80;//转账记录，查询的时候使用
	
}
